@@ -43,6 +43,9 @@ if _sys.platform.startswith('java'):
         cal.clear()
         return cal
 
+    def _make_java_default_calendar():
+        return GregorianCalendar(0, 0, 0, 0, 0, 0)
+
     def _make_java_calendar(d):
         tzinfo = d.tzinfo
         if tzinfo == None:
@@ -1073,11 +1076,13 @@ class date(object):
         def __tojava__(self, java_class):
             if java_class not in (Calendar, Date, Object):
                 return Py.NoConversion
-            calendar = _make_java_utc_calendar()
-            calendar.set(self.year, self.month - 1, self.day)
             if java_class == Calendar:
+                calendar = _make_java_utc_calendar()
+                calendar.set(self.year, self.month - 1, self.day)
                 return calendar
             else:
+                calendar = _make_java_default_calendar()
+                calendar.set(self.year, self.month - 1, self.day)
                 return Date(calendar.getTimeInMillis())
 
 
